:bug: fix align lang item

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -597,6 +597,7 @@
 
         .mlp-lang-switcher{
             li{
+                text-align: center;
                 margin: 10px 0 0;
             }
         }
